    - CVE-2013-5891
    - CVE-2013-5908
    - CVE-2014-0386
    - CVE-2014-0393
    - CVE-2014-0401
    - CVE-2014-0402
    - CVE-2014-0412
    - CVE-2014-0420
    - CVE-2014-0437
  * Dropped, included in upstream release:
    - d/patches/CVE-2014-0001.patch
    - d/patches/fix-implicit-conversion.patch
    - d/patches/patch-sql_sql__yacc.yy
  * d/patches/*: Refreshed remaining patches.

 -- James Page <james.page@ubuntu.com>  Sun, 11 May 2014 10:52:14 -0400

percona-xtradb-cluster-5.5 (5.5.34-25.9+dfsg-0ubuntu4) trusty; urgency=medium

  * d/p/CVE-2014-0001.patch:
    - Fix buffer overflow in client/mysql.cc via a long server version string.
      CVE-2014-0001
  * d/p/fix_standalone_tests.patch: Cherry pick patch from mysql-* packaging
    to ensure that MySQL testsuite can be run from /usr/lib/mysql-testsuite.

 -- James Page <james.page@ubuntu.com>  Tue, 18 Mar 2014 17:18:58 +0000

percona-xtradb-cluster-5.5 (5.5.34-25.9+dfsg-0ubuntu3) trusty; urgency=medium

  * d/p/70_mysql_va_list.patch: Cherry pick patch from mysql-5.5 to ensure that
    va_list usage is portable, fixing FTBFS on armhf and arm64.

 -- James Page <james.page@ubuntu.com>  Tue, 11 Mar 2014 15:24:43 +0000

percona-xtradb-cluster-5.5 (5.5.34-25.9+dfsg-0ubuntu2) trusty; urgency=medium

  * d/control,rules,autoreconf: Use dh-autoreconf to reconfigure UDF and
    HandlerSocket-Plugin-for-MySQL sub-projects, fixing FTBFS on ppc64el.
  * d/control: Align Provides/Breaks/Replaces/Conflicts to virtual-mysql-*
    approach for switching in/out MySQL alternatives.
  * d/control: Add lsb-release to BD's.
  * d/additions/pxc.cnf,percona-xtradb-cluster-common-5.5.install: Add PXC
    specific configuration to /etc/mysql/conf.d to disable MySQL query cache
    (LP: #1290331).
  * d/control: Drop dependency on libmysqlclient18 - not used.

 -- James Page <james.page@ubuntu.com>  Mon, 10 Mar 2014 17:31:43 +0000

percona-xtradb-cluster-5.5 (5.5.34-25.9+dfsg-0ubuntu1) trusty; urgency=medium

  * Initial release.