@@ -8,9 +8,10 @@ TMP=$(CURDIR)/debian/tmp/
 
 DISTRIBUTION := $(shell lsb_release -i -s)
 feature_set="community"
-major_version=31
-minor_version=1
-compilation_comment_release="Percona XtraDB Cluster (GPL), Release $(major_version).$(minor_version) ($(DISTRIBUTION))"
+major_version=35
+minor_version=0
+wsrep_version="25.10"
+compilation_comment_release="Percona XtraDB Cluster (GPL), Release $(wsrep_version)"
 prefix="/usr"
 builddir=release
 
@@ -43,7 +44,7 @@ override_dh_auto_configure:
 			   -DMYSQL_UNIX_ADDR="/var/run/mysqld/mysqld.sock" \
 			   -DFEATURE_SET=$(feature_set) \
 			   -DCOMPILATION_COMMENT=$(compilation_comment_release) \
-			   -DMYSQL_SERVE_SUFFIX=$(DEB_VERSION) \
+			   -DMYSQL_SERVER_SUFFIX=$(DEB_VERSION) \
 			   -DWITH_PAM=ON'
 
 override_dh_auto_build:
